src/apps/services/texasdust/k8s/wordpress-exporter.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-exporter
  namespace: texasdust
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/proxy-group: "norns-ingress"
  labels:
    app: wordpress-exporter
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 11011
      targetPort: metrics
  selector:
    app: wordpress-exporter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-exporter
  namespace: texasdust
  labels:
    app: wordpress-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-exporter
  template:
    metadata:
      labels:
        app: wordpress-exporter
    spec:
      containers:
        - name: wordpress-exporter
          image: ghcr.io/aorfanos/wordpress-exporter/wordpress-exporter:v0.0.8
          args:
            - -host
            - http://wordpress
            - -auth.basic
            - "false"
          ports:
            - name: metrics
              containerPort: 11011
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
