src/apps/services/texasdust/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: texasdust
  namespace: texasdust
spec:
  parentRefs:
  - name: internal
    namespace: gateway
  hostnames:
  - "texasdust.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ghost
      port: 80
